# compFis

./: LICENSE  README.md
kepler/: kepler  kepler.cpp  kepler.txt  plotfromfile.py  test.cpp
lib/: matrix.h  matrixUtils.h  numericalMethods.cpp  numericalMethods.h  subMatrix.h  test  test.cpp  utils.h  vec.h
nBody/: CMakeLists.txt  README.md  approxState.h  barHutTree.cpp  barHutTree.h  barnesHutTree.h  circle.h  ellypticGalaxy.h  galaxy.h  nBody.cpp  simulation.cpp  state.cpp  state.h  sym8.h
nBody/circle/: graphics.cpp  graphics.h  params.h
nBody/eight/: graphics.cpp  graphics.h  params.h
nBody/ellypticGalaxy/: graphics.cpp  graphics.h  params.h
nBody/galaxy/: graphics.cpp  graphics.h  params.h
nPendulum/: anim  data  nPendEigen.cpp  nPendulum.cpp  nPendulum.txt  nPendulumData  nPendulumData.cpp  plotfromfile.py
simplePendulum/: anim  simplePendulum.cpp
synchroPendulums/: anim  mymake.sh  plotfromfile.py  synchroPendulum.cpp  synchroPendulumsData  synchroPendulumsData.cpp  twoPendtry.cpp
